# readme-table-linter

./: .gitignore  LICENSE  README.md  pyproject.toml
src/readme_table_linter/: __init__.py  __main__.py  linter.py
