[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readme-table-linter"
version = "0.1.0"
description = "A tiny linter for markdown tables in README files."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "appscorecards contributors" }]

[project.scripts]
readme-table-linter = "readme_table_linter.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
